# vs-mlrt-api4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linux-migx.yml  linux-ncnn.yml  linux-ort.yml  linux-ov-arm64.yml  linux-ov.yml  linux-trt-arm64.yml  linux-trt-rtx.yml  linux-trt.yml  macos-ort.yml  windows-migx.yml  windows-ncnn.yml  windows-ort.yml  windows-ov.yml  windows-trt.yml  windows-trt_rtx.yml  windows-vcs-generic-install-smoke.yml  windows-vcs-generic.yml  windows-vcs-install-smoke.yml  windows-vcs-models.yml  windows-vcs-package.yml
docs/: trt-cuda-release-matrix.md
packaging/: cuda-tag.txt  manifest.vs  vsmlrt_build.py
packaging/payloads/_shared/: payload_build.py
packaging/payloads/cu121/: hatch_build.py  pyproject.toml
packaging/payloads/cu121/vs_mlrt_payload_cu121/: __init__.py
packaging/payloads/cu129/: hatch_build.py  pyproject.toml
packaging/payloads/cu129/vs_mlrt_payload_cu129/: __init__.py
packaging/payloads/generic/: hatch_build.py  pyproject.toml
packaging/payloads/generic/vs_mlrt_payload_generic/: __init__.py
packaging/payloads/models/: hatch_build.py  pyproject.toml
packaging/payloads/models/vsmlrt_models/: __init__.py
scripts/: vs_mlrt_dll_paths.pth  vsmlrt.py  vsmlrt_dll_paths.py  vsmlrt_uninstall.py
tools/: compare_api3_api4_vsmlrt_backends.py  smoke_vcs_extras_install.py
vsmigx/: vs_migraphx.cpp
vsncnn/: onnx2ncnn.cpp  vs_ncnn.cpp
vsort/: CMakeLists.txt  vs_onnxruntime.cpp
vsov/: vs_openvino.cpp  win32.cpp
vstrt/: inference_helper.h  utils.h  vs_tensorrt.cpp  win32.cpp
