[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vs-mlrt"
version = "3.23.2"
description = "VapourSynth ML runtime tools with release-backed Windows payloads"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "AmusementClub" }]
dependencies = [
    "vapoursynth>=75",
    "numpy",
    "onnx",
    "onnxconverter-common",
]

[project.urls]
"Source Code" = "https://github.com/RyougiKukoc/vs-mlrt-api4"
"Bug Tracker" = "https://github.com/RyougiKukoc/vs-mlrt-api4/issues"

[project.optional-dependencies]
generic = [
    "vs-mlrt-models @ git+https://github.com/RyougiKukoc/vs-mlrt-api4.git#subdirectory=packaging/payloads/models",
    "vs-mlrt-payload-generic @ git+https://github.com/RyougiKukoc/vs-mlrt-api4.git#subdirectory=packaging/payloads/generic",
]
cu121 = [
    "vs-mlrt-models @ git+https://github.com/RyougiKukoc/vs-mlrt-api4.git#subdirectory=packaging/payloads/models",
    "vs-mlrt-payload-cu121 @ git+https://github.com/RyougiKukoc/vs-mlrt-api4.git#subdirectory=packaging/payloads/cu121",
]
cu129 = [
    "vs-mlrt-models @ git+https://github.com/RyougiKukoc/vs-mlrt-api4.git#subdirectory=packaging/payloads/models",
    "vs-mlrt-payload-cu129 @ git+https://github.com/RyougiKukoc/vs-mlrt-api4.git#subdirectory=packaging/payloads/cu129",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "scripts/vsmlrt.py",
    "scripts/vsmlrt_dll_paths.py",
    "scripts/vsmlrt_uninstall.py",
    "scripts/vs_mlrt_dll_paths.pth",
]

[tool.hatch.build.targets.wheel.sources]
"scripts" = ""

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "packaging/vsmlrt_build.py"
