[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vs-mlrt-models"
version = "3.23.2"
description = "Release-backed vs-mlrt shared model payload"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
only-include = ["vsmlrt_models"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
